# acropolis-bot

./: .env.example  .gitignore  Dockerfile  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  approve_usdc.py  deploy.sh  docker-compose.yml  generate_wallet.py  main.py  pyproject.toml  test_api.py  test_setup.py  wallet_from_seed.py  web.py
nginx/: default.conf
src/: bot_engine.py  config.py
src/core/: __init__.py  chainlink_feed.py  paper_trader.py  poly_api.py  polymarket.py  trader.py  wallet.py
src/notifications/: telegram.py
src/strategies/: __init__.py  arbitrage.py  bayesian_model.py  copytrade.py  latency_arb.py  momentum.py  panic_reversal.py  spread_farmer.py  streak.py
src/web/: __init__.py  server.py
templates/: dashboard.html
